Assets/SensorSdk/SensorCapi.cs


    // Per-operation completions. errorMsg is empty (not NULL) on success.
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void SenCompletionCb(IntPtr ctx, int result, IntPtr errorMsg);
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void SenParamCb(IntPtr ctx, IntPtr result, IntPtr errorMsg);
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void SenBatteryCb(IntPtr ctx, int result, IntPtr errorMsg);
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void SenInfoCb(IntPtr ctx, IntPtr info, IntPtr errorMsg);

    // Synchronized multi-device start/stop result (sen_multi_result_cb):
    // macs/oks/errors are parallel borrowed arrays of count entries
    // (char* / int / char*), valid for the callback scope only; the error
    // strings are empty on success.
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void SenMultiResultCb(
        IntPtr ctx, IntPtr macs, IntPtr oks, IntPtr errors, UIntPtr count);

    internal static class Native
    {
#if UNITY_IOS && !UNITY_EDITOR
        // iOS statically links the SDK into the Unity binary.
        private const string Dll = "__Internal";
#else
        private const string Dll = "sensor";
#endif
        private const CallingConvention Cc = CallingConvention.Cdecl;

        // Mirror of SEN_CAPI_VERSION in sen_capi.h; bump in sync with the header.
        internal const uint ExpectedCapiVersion = 10;

        /* ---- controller ---- */

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_terminate();

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern uint sen_capi_version();

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern IntPtr sen_controller_create();

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_destroy(IntPtr ctrl);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_set_callbacks(
            IntPtr ctrl, in SenControllerCbs cbs, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_controller_is_enable(IntPtr ctrl);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_controller_is_scanning(IntPtr ctrl);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_controller_start_scan(IntPtr ctrl, int periodInMS);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_controller_stop_scan(IntPtr ctrl);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_set_debug_enabled(IntPtr ctrl, int enabled);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_set_data_log_enabled(IntPtr ctrl, int enabled);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_set_log_path(
            IntPtr ctrl, int enabled,
            [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_log(
            IntPtr ctrl,
            [MarshalAs(UnmanagedType.LPStr)] string message,
            [MarshalAs(UnmanagedType.LPStr)] string level);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_on_suspend(IntPtr ctrl);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern IntPtr sen_controller_require_sensor(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string mac);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern IntPtr sen_controller_get_sensor(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string mac);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern UIntPtr sen_controller_get_sensors(
            IntPtr ctrl, IntPtr[] outHandles, UIntPtr capacity);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern UIntPtr sen_controller_get_connected_sensors(
            IntPtr ctrl, IntPtr[] outHandles, UIntPtr capacity);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern int sen_controller_get_bin_file_info(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string path,
            ref SenBinFileInfo outInfo);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern IntPtr sen_controller_replay_bin_file(
            IntPtr ctrl,
            [MarshalAs(UnmanagedType.LPStr)] string path,
            [MarshalAs(UnmanagedType.LPStr)] string deviceMac,
            int realtime, uint timeoutMs);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern UIntPtr sen_controller_multi_replay_bin_file(
            IntPtr ctrl,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] paths,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] macs,
            UIntPtr count, int realtime, uint timeoutMs,
            [Out] IntPtr[] outProfiles);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_pause_bin_replay(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string deviceMac,
            IntPtr buf, UIntPtr len);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_resume_bin_replay(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string deviceMac,
            IntPtr buf, UIntPtr len);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_stop_bin_replay(
            IntPtr ctrl, [MarshalAs(UnmanagedType.LPStr)] string deviceMac,
            IntPtr buf, UIntPtr len);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_controller_parse_bin_to_csv(
            IntPtr ctrl,
            [MarshalAs(UnmanagedType.LPStr)] string binPath,
            [MarshalAs(UnmanagedType.LPStr)] string csvPath,
            IntPtr buf, UIntPtr len);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_get_version(
            IntPtr ctrl, IntPtr buf, UIntPtr len);

        // Synchronized multi-device stream start/stop: cb fires exactly once
        // with the per-device results (see SenMultiResultCb).
        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_multi_start_data(
            IntPtr ctrl, IntPtr[] profiles, UIntPtr count,
            int timeoutMs, int maxDelayDispersionMs, int maxAttempts,
            SenMultiResultCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_controller_multi_stop_data(
            IntPtr ctrl, IntPtr[] profiles, UIntPtr count,
            int timeoutMs, SenMultiResultCb cb, IntPtr ctx);

        /* ---- profile ---- */

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_set_callbacks(
            IntPtr profile, in SenProfileCbs cbs, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_get_device(
            IntPtr profile, ref SenBleDevice outDevice);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_profile_get_state(IntPtr profile);

        // Callback-async (Python asyncConnect/asyncDisconnect parity): cb may be
        // null (fire-and-forget); a non-null cb fires exactly once with the
        // final result and an empty errorMsg on success.
        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_connect(IntPtr profile, SenCompletionCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_disconnect(IntPtr profile, SenCompletionCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_profile_has_init(IntPtr profile);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern int sen_profile_has_start_data_notification(IntPtr profile);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_init(
            IntPtr profile, int packageSampleCount, int timeoutMs,
            int powerRefreshIntervalMs, SenCompletionCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_start_data(
            IntPtr profile, int timeoutMs, SenCompletionCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_stop_data(
            IntPtr profile, int timeoutMs, SenCompletionCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_get_battery_level(
            IntPtr profile, int timeoutMs, SenBatteryCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_fetch_device_info(
            IntPtr profile, int timeoutMs, SenInfoCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_get_device_info(
            IntPtr profile, ref SenDeviceInfo outInfo);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_profile_set_param(
            IntPtr profile, int timeoutMs,
            [MarshalAs(UnmanagedType.LPStr)] string key,
            [MarshalAs(UnmanagedType.LPStr)] string value,
            SenParamCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_profile_get_param(
            IntPtr profile, int timeoutMs,
            [MarshalAs(UnmanagedType.LPStr)] string key,
            SenParamCb cb, IntPtr ctx);

        [DllImport(Dll, CallingConvention = Cc)]
        internal static extern void sen_profile_set_auto_reconnect(IntPtr profile, int enabled);

        [DllImport(Dll, CallingConvention = Cc, CharSet = CharSet.Ansi)]
        internal static extern void sen_profile_log(
            IntPtr profile,
            [MarshalAs(UnmanagedType.LPStr)] string message,
            [MarshalAs(UnmanagedType.LPStr)] string level);
    }
}

#if !UNITY_5_3_OR_NEWER
// Compile-time stub of UnityEngine's AOT.MonoPInvokeCallbackAttribute so the
// reverse-P/Invoke callback markers in Sensor.cs compile outside Unity. Unity
// always defines UNITY_5_3_OR_NEWER, so Unity builds use the real attribute
// (UnityEngine.CoreModule, namespace AOT). It is a marker only: IL2CPP reverse
// P/Invoke works for static methods regardless, the attribute documents intent.
namespace AOT
{
    [AttributeUsage(AttributeTargets.Method)]
    internal sealed class MonoPInvokeCallbackAttribute : Attribute
    {
        public MonoPInvokeCallbackAttribute(Type type) { }
    }
}
#endif
